can calculate grade

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,4 +33,7 @@
     </form>
   </div>
 </nav>
-<router-outlet></router-outlet>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
