--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,9 +1,29 @@
-<p>หน่วยกิจที่ใช้คำนวณ: {{ totalCredit() }}</p>
+<!-- <p>หน่วยกิจที่ใช้คำนวณ: {{ totalCredit() }}</p>
 <p>เกรดเฉลี่ยสะสม: {{ totalGpa() | number : '1.2-2' }}</p>
+ -->
 
-
-<table class="table">
+<div class="row">
+  <div class="col-md-4 mt-3">
+    <h2>คำนวณเกรด</h2>
+  </div>
+  <div class="col-md"></div>
+  <div class="col-md-2">
+    <button class="mt-3 btn btn-success btn-block btn-sm" (click)="clearSubjects()">
+      เพิ่มวิชา
+    </button>
+  </div>
+  <div class="col-md-2">
+    <button class="mt-3 btn btn-danger btn-block btn-sm" (click)="clearSubjects()">
+      ลบทั้งหมด
+    </button>
+  </div>
+</div>
+<table class="table table-sm">
   <thead>
+    <tr>
+      <th colspan="2" class="text-right">เกรดเฉลี่ยรวม</th>
+      <th class="text-center">{{ totalGpa() | number: '1.2-2'}}</th>
+    </tr>
     <tr>
       <th width="65%">ชื่อวิชา</th>
       <th width="15%" class="text-center">หน่วยกิจ</th>
@@ -14,10 +34,10 @@
   <tbody>
     <tr *ngFor="let subject of subjects">
       <td class="text-muted">
-        <input type="text" name="credit" [(ngModel)]="subject.title" class="form-control form-controle-sm" placeholder="ชื่อวิชา" (change)="saveSession()">
+        <input type="text" name="credit" [(ngModel)]="subject.title" class="form-control form-control-sm" placeholder="ชื่อวิชา" (change)="saveSession()">
       </td>
       <td class="text-muted text-center">
-        <input type="number" name="credit" [(ngModel)]="subject.credit" class="form-control form-controle-sm">
+        <input type="number" name="credit" [(ngModel)]="subject.credit" class="form-control form-control-sm">
       </td>
       <td class="text-muted text-center">
         <select name="grade" [(ngModel)]="subject.grade" class="form-control form-control-sm">
@@ -32,12 +52,10 @@
         </select>
       </td>
       <td (click)="remove($index)">
-        <i class="fa fa-trash"></i>
+        <button class="btn btn-danger btn-sm">
+          <i class="fa fa-trash"></i>
+        </button>
       </td>
     </tr>
   </tbody>
 </table>
-
-<button class="btn btn-info" (click)="addSubject()">
-  เพิ่มวิชา
-</button>
