--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,29 +2,80 @@
 <p>เกรดเฉลี่ยสะสม: {{ totalGpa() | number : '1.2-2' }}</p>
  -->
 
-<div class="row">
-  <div class="col-md-4 mt-3">
+<div class="row mt-3">
+  <div class="col-md-3">
     <h2>คำนวณเกรด</h2>
   </div>
-  <div class="col-md"></div>
+  <div class="col-md-3 mt-2">
+    <p>เกรดเฉลี่ยสะสม: {{ totalGpa() | number: '1.2-2' }}</p>
+  </div>
+  <div class="col-md-2 mt-2">
+    <p>หน่วยกิตสะสม: {{ totalCredit()}}</p>
+  </div>
   <div class="col-md-2">
-    <button class="mt-3 btn btn-success btn-block btn-sm" (click)="clearSubjects()">
+    <button class=" btn btn-success btn-block btn-sm" (click)="addSubject()">
       เพิ่มวิชา
     </button>
   </div>
   <div class="col-md-2">
-    <button class="mt-3 btn btn-danger btn-block btn-sm" (click)="clearSubjects()">
+    <button class=" btn btn-danger btn-block btn-sm" (click)="clearSubjects()">
       ลบทั้งหมด
     </button>
   </div>
 </div>
-<table class="table table-sm">
+
+<div class="card">
+  <div class="card-body">
+    <div class="row">
+      <div class="col-md-3">
+        <p class="mb-0">
+          ดึงข้อมูลวิชา
+          <small class="text-success">(<i class="fa fa-key" aria-hidden="true"></i>ไม่มีการรหัสผ่าน)</small>
+        </p>
+      </div>
+      <div class="col-md-6">
+        <form (ngSubmit)="submit()">
+          <div class="row">
+            <div class="col-md-5 form-group mb-0">
+              <div class="input-group input-group-sm">
+                <input type="text" name="email" [(ngModel)]="email" class="form-control" placeholder="อีเมล">
+                <div class="input-group-append">
+                  <span class="input-group-text">@cmu.ac.th</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 form-group mb-0">
+              <input type="password" name="email" [(ngModel)]="password" class="form-control form-control-sm" placeholder="รหัสผ่าน">
+            </div>
+
+            <div class="col-md-2 form-group mb-0">
+              <button type="submit" class="btn btn-block btn-sm btn-outline-success" *ngIf="!isLoading">
+                ยืนยัน
+              </button>
+              <button type="button" class="btn btn-block btn-sm btn-outline-secondary" *ngIf="isLoading">
+                <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <div class="col-md-3">
+        <span *ngIf="isError" class="text-warning">
+          <strong>
+            <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+          </strong>
+          อีเมล หรือ รหัสผ่านไม่ถูกต้อง
+        </span>
+      </div>
+    </div>
+  </div>
+</div>
+
+<table class="table table-sm table-striped table-bordered mt-4">
   <thead>
-    <tr>
-      <th colspan="2" class="text-right">เกรดเฉลี่ยรวม</th>
-      <th class="text-center">{{ totalGpa() | number: '1.2-2'}}</th>
-    </tr>
-    <tr>
+    <tr class="bg-dark text-white">
       <th width="65%">ชื่อวิชา</th>
       <th width="15%" class="text-center">หน่วยกิจ</th>
       <th width="15%" class="text-center">เกรด</th>
@@ -49,6 +100,8 @@
           <option value="1.5">D+</option>
           <option value="1">D</option>
           <option value="0">F</option>
+          <option value="-2">S</option>
+          <option value="-1">W</option>
         </select>
       </td>
       <td (click)="remove($index)">
