Fixed remove subject

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -104,8 +104,8 @@
           <option value="-1">W</option>
         </select>
       </td>
-      <td (click)="remove($index)">
-        <button class="btn btn-danger btn-sm">
+      <td>
+        <button class="btn btn-danger btn-sm" (click)="remove($index)">
           <i class="fa fa-trash"></i>
         </button>
       </td>
